# policy_entanglement

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  ISA.md  LICENSE  Makefile  README.md  conftest.py  coverage_project.json  domain_profile.yaml  experiment_plan.yaml  pyproject.toml
docs/: AGENTS.md  CHANGELOG.md  CONCEPTS.md  FAQ.md  READING_ORDER.md  README.md  RELEASE_v1.0.0.md  glossary.md
docs/_audit/: AGENTS.md  DOC_MANUSCRIPT_AUDIT_2026-05-26.md  FOUR_SKILL_ASSESSMENT_2026-05-19.md  ISA_20260522_workplan_implement.md  ISA_20260524_gnn_fifth_track.md  ISA_20260525_robustness_cluster.md  MATHLIB_AXIOM_AUDIT.md  README.md  THERMO_NUCLEAR_REVIEW_2026-05-25.md  THERMO_NUCLEAR_REVIEW_2026-05-26_v1_closure.md  pymdp_lean_manuscript_matrix_2026-05-21.csv
docs/guides/: AGENTS.md  README.md  build_run.md  quickstart_recipes.md  styleguide.md  testing.md  zenodo-doi-strategy.md
docs/modules/: AGENTS.md  README.md  basic.md  bernoulli_toy.md  connections_witnesses.md  constructive.md  convexity.md  coupling.md  decomposition_theorem.md  free_energy.md  heterogeneous_ensembles.md  information_geometry.md  joint_dist.md  markov_blanket.md  monotonicity.md  scalar_typeclass.md  spectral_structure.md  spectral_witnesses.md
docs/reference/: AGENTS.md  HOW_TO_VERIFY.md  README.md  _theorem_map.md  architecture.md  four_track_coherence.md  invariants_reference.md  lean_reference.md  manuscript_map.md  math_reference.md  methods_and_assumptions.md  methods_audit.md  methods_orchestration.md  phase7_plan.md  python_api.md  python_api_gnn.md  python_api_lean.md  python_api_manuscript.md  python_api_simulation.md  python_api_visualizations.md  reproducibility_checklist.md  statistics_reference.md  veridical_status.md
docs/simulation/: AGENTS.md  README.md  pomdp_simulation.md  visualizations.md
gnn/: bernoulli_toy.gnn.md  k_stream_ensemble.gnn.md
lean/: AGENTS.md  ActinfPolicyEntanglement.lean  FepSketches.lean  README.md  STYLE.md  lake-manifest.json  lakefile.lean
lean/ActinfPolicyEntanglement/: AGENTS.md  Basic.lean  BernoulliToy.lean  ConnectionsWitnesses.lean  Constructive.lean  Convexity.lean  Coupling.lean  Decomposition.lean  FloatRealResidualWitness.lean  FreeEnergy.lean  Geometry.lean  Heterogeneous.lean  JointDist.lean  MarkovBlanket.lean  MathlibRefinementRoadmap.md  Monotonicity.lean  Phase7Roadmap.md  README.md  Scalar.lean  Spectral.lean  SpectralWitnesses.lean
lean/FepSketches/: AGENTS.md  PolicyEntanglementBoundary.lean  README.md
lean/MathlibProofs/: AGENTS.md  MathlibProofs.lean  README.md  lake-manifest.json  lakefile.lean
manuscript/: 00_abstract.md  01_motivation_and_position.md  02_setup_and_assumptions.md  02a_notation_glossary.md  03_lambda_deformation.md  04_entanglement_decomposition.md  05_examples_and_worked_cases.md  06_information_geometry.md  07_spectral_and_tensor_network.md  08_heterogeneous_inference.md  09_phase_structure.md  0A_abstract.md  10_comparative_statics.md  11_connections_to_existing_frameworks.md  12_lean_formalization_plan.md  13_empirical_simulation_suite.md  14_open_theoretical_questions.md  15_companion_paper_outline.md  16_discussion_worldview.md  17_closing_remarks.md  1A_part1_introduction.md  1B_motivation.md  1C_background_and_prior_work.md  2A_part2_theory.md  2B_setup.md  2C_lambda_deformation.md  2D_decomposition.md  2E_examples.md  2F_geometry.md  2G_spectral.md  2H_heterogeneous.md  2I_phase_structure.md  2J_comparative_statics.md  3A_part3_formal_verification.md  3B_lean_formalization.md  4A_part4_empirical_grounding.md  4B_empirical_suite.md  4C_pymdp_harness.md  4D_pymdp_free_energy.md  4E_pymdp_validation.md  (+22 more)
manuscript/refs/: AGENTS.md  README.md  audit_tracks.yaml  citations.yaml  labels.yaml
scripts/: AGENTS.md  README.md  _bootstrap.py  build_dashboard.py  build_lean.py  build_mathlib_proofs.py  build_pdf.py  check_concordance.py  dump_archetypes.py  generate_audit_matrix.py  generate_figures.py  generate_index.py  generate_theorem_map.py  gnn_to_pymdp.py  inject_manuscript_variables.py  manuscript_variables.py  parameter_sweep.py  readiness_report.py  regression_baseline.json  regression_gate.py  run_all.py  simulate_adversarial.py  simulate_btai.py  simulate_gnn.py  simulate_long_horizon.py  simulate_multi_k.py  simulate_pymdp.py  simulate_revertibility.py  simulate_robustness.py  validate_manuscript.py  validate_outputs.py  validate_pdf.py
src/: AGENTS.md  README.md  __init__.py
src/actinf_policy_entanglement_lean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dashboard_types/: AGENTS.md  __init__.py  cli.py  dashboard.py  panels.py  paths.py  payload.py  types.py
src/gates/: AGENTS.md  __init__.py  regression_baseline.py  regression_gate.py  regression_pytest.py
src/gnn/: AGENTS.md  README.md  __init__.py  bridge.py  lean_emit.py  model.py  parser.py  runner.py
src/lean/: AGENTS.md  README.md  __init__.py  _lake_lock.py  bernoulli_toy.py  build_gate.py  coupling.py  decomposition.py  free_energy.py  geometry.py  heterogeneous.py  invariants.py  (+4 more)
tests/: AGENTS.md  PATTERNS.md  README.md  conftest.py  output_gates_helpers.py  test_active_inference_variant_relationships.py  test_adversarial.py  test_agents_readme_audit.py  test_american_english.py  test_analytic_status_pin.py  test_annotations_helpers.py  test_audit_matrix_and_float_interval.py  test_bernoulli_toy.py  test_branch_coverage_push.py  test_btai_baseline.py  test_btai_plots_module.py  test_build_gate_unit.py  test_claim_strength_table.py  test_concordance_enforced.py  test_coupling.py  test_coverage_95_final.py  test_coverage_final_push.py  test_coverage_gaps_pure.py  test_coverage_library_gaps.py  test_coverage_push_95.py  test_cross_references.py  test_dashboard_types.py  test_decomposition.py  test_docs_no_stale_registry_numbers.py  test_equation_numbering.py  test_figure_scripts.py  test_format_lambda_key.py  test_free_energy.py  test_free_energy_plots.py  test_free_energy_viz.py  test_generate_index.py  test_geometry.py  test_gnn_concordance.py  test_gnn_parser.py  test_gnn_round_trip.py  (+68 more)
(+145 files in other folders)
