# Active Inference Policy Entanglement project
# Four-track project: Lean 4 boundary fragment, additive MathlibProofs
# analytic layer, Python numerical companion, and an
# inferactively-pymdp==1.0.1-backed `pymdp` simulation / visualization /
# manuscript pipeline for coupled-policy ensembles.
#
# Environment is managed by `uv`.  Common workflows:
#   uv sync                              # core + dev + viz + lint groups
#   uv sync --group sim                  # adds inferactively-pymdp==1.0.1
#   uv sync --group sim --group viz      # everything
#   uv run pytest tests/                 # ≥95% coverage on src/
#   uv run python scripts/run_all.py     # full reproducibility chain

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actinf_policy_entanglement_lean"
version = "0.3.0"
description = "Tunable mean-field deformation framework for multi-stream policy ensembles in active inference (Lean 4 + Python companion + pymdp POMDP harness)."
authors = [
    {name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",  # used by src/manuscript/registry.py
]

[project.optional-dependencies]
# Kept for `pip install -e .[dev]` consumers; mirrors the dev group.
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

# inferactively-pymdp==1.0.1 brings the `pymdp` import plus the JAX /
# chex / equinox stack used by src/simulation/ to simulate the analytical
# setting end-to-end.
sim = [
    "inferactively-pymdp==1.0.1",
]

# Visualization extras (heatmaps, dendrograms, network diagrams).
viz = [
    "seaborn>=0.13.0",
    "networkx>=3.2",
    "plotly>=5.20",
]

# Static-analysis tooling pinned to versions matching the parent template.
lint = [
    "ruff>=0.6.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

# uv-native dependency groups (PEP 735 style; consumed by `uv sync --group`).
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
sim = [
    "inferactively-pymdp==1.0.1",
]
viz = [
    "seaborn>=0.13.0",
    "networkx>=3.2",
    "plotly>=5.20",
]
lint = [
    "ruff>=0.6.0",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[tool.uv]
default-groups = ["dev", "viz", "lint"]

[tool.pytest.ini_options]
# Single canonical path: `src/` is on PYTHONPATH so every test and
# script imports via the namespaced subpackage path:
#   from lean.coupling import ...
#   from simulation.specs import ...
#   from manuscript.registry import ...
#   from visualizations.heatmaps import ...
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "requires_pymdp: tests that require the inferactively-pymdp==1.0.1 sim group",
    "slow: longer-running integration tests",
]
filterwarnings = [
    # inferactively-pymdp==1.0.1 + Equinox emit a benign UserWarning on Agent construction.
    "ignore:A JAX array is being set as static.*:UserWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/AGENTS.md"]

[tool.coverage.report]
# CLAUDE.md rotating-project coverage exception (Lean-toolchain project).
# This project's Lean build, live external CLI, and Ollama/pymdp-gated
# simulation surface (src/simulation/{agents,inference,multi_k_experiments,
# revertibility,rollout,robustness,long_horizon,sweep}.py) is intentionally
# CI-only and sits below the 90% per-project exemplar floor — exactly the
# documented basis for the rotating-project exception in CLAUDE.md
# ("Coverage Requirements › Rotating-project exceptions"). With the pymdp
# `sim` group absent from the template's `uv run` environment those
# modules' bodies are unreachable, so an aspirational 95 can never be met
# here and the pipeline gate (infrastructure/reporting/pipeline_test_runner.py
# `_project_declared_coverage_floor`) fails the project against its own
# unattainable target. The pure-Python manuscript/lean surface IS driven
# high with real no-mock tests; measured TOTAL coverage on src/ in the
# reproducible gate environment is ≥95% on src/ (2026-05-24, 1332+ passed /
# measured ≥95% TOTAL on src/ in the reproducible gate environment). 95 is the enforced floor in pyproject.toml and
# regression_gate.py (single-sourced via ``_coverage_fail_under``).
fail_under = 95
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # pymdp is an optional dep; the import-guarded branch is covered by
    # the dedicated tests under tests/test_simulation_pymdp.py when sim
    # is installed and gracefully skipped otherwise.
    "if not _HAS_PYMDP",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# Lean + pymdp-adjacent modules keep manuscript symbol names (A,B,G,J,Kc, …).
[tool.ruff.lint.per-file-ignores]
"src/lean/**/*.py" = ["N803", "N806"]
"src/simulation/agents.py" = ["N806"]
"src/simulation/builders.py" = ["N806"]
"src/simulation/inference.py" = ["N806"]
"src/simulation/statistics.py" = ["N806"]
"src/manuscript/**/*.py" = ["N806", "SIM113"]
# Tests mirror manuscript notation (K, P, Q, L, I, l for streams, joints, λ, mutual info)
# and occasionally use sectioned in-file imports for readability of large coverage files.
"tests/**/*.py" = ["N802", "N803", "N806", "N812", "E402", "E741"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true   # pymdp / seaborn / plotly are optional
